# marimo-dagster

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/marimo_dagster/: __init__.py  _dagster_ast.py  _ir.py  _marimo_ast.py  _metadata.py  cli.py  converter.py
tests/: conftest.py  test_cd_version.py  test_converter.py  test_dagster_ast.py  test_ir.py  test_marimo_ast.py  test_marimo_dagster.py  test_marimo_validation.py  test_metadata.py
tests/examples/: __init__.py
tests/examples/dagster/: __init__.py
tests/examples/dagster/tier1/: __init__.py  simple_asset.py  three_asset_chain.py  two_assets_with_dep.py
tests/examples/dagster/tier2/: __init__.py  assets_with_definitions.py  assets_with_jobs_schedules.py  assets_with_resources.py  diamond_dependency.py
tests/examples/dagster/tier3/: __init__.py  assets_with_sensor.py  diamond_dependency.py  groups_and_metadata.py  partitioned_assets.py
tests/examples/marimo/: __init__.py
tests/examples/marimo/tier1/: __init__.py  querying_dataframes.py  read_csv.py  read_parquet.py
tests/examples/marimo/tier2/: __init__.py  connect_to_sqlite.py  duckdb_example.py  parametrizing_sql_queries.py
tests/examples/marimo/tier3/: __init__.py  ibis_example.py  polars_example.py
